# reputation-gnn

./: .dockerignore  .env  .env.example  .gitignore  Readme.md  docker-compose.yaml  enunciado  pyproject.toml
bot_detector/: metadata.json  model.pt
deployment/: Dockerfile-api  Dockerfile-ingest  Dockerfile-test-model  Dockerfile-training
src/app/: config.py  main.py
src/app/api/: __init__.py  depends.py  health.py
src/app/api/exceptions/: custom_exceptions.py  handler.py
src/app/api/v1/: __init__.py
src/app/connectors/: redis_conector.py
src/app/domain/: repository_interfaces.py  service_interfaces.py
src/app/mappers/: person_mapper.py
src/app/repository/: repository_people_redis.py
src/app/schemas/: health.py  person.py  predict.py
src/app/service/: health_service.py  person_service.py  predict_service.py
src/brain/: config.py  config_test.py  config_train.py  graph_data_loader.py  main.py  model_predictor.py  model_trainer.py  predictor.py
src/brain/architectures/: bot_detector_gcn.py  bot_detector_gcn_sage.py  factory.py
src/brain/data/: graph_loader.py  graph_module.py  neighbor_loader.py
src/brain/model/: full_batch_model.py  model_base.py  model_interface.py  model_predictor.py  model_train_interface.py
src/brain/models/: bot_detector_gcn.py  bot_detector_gcn_sage.py  interfaces.py  model_factory.py
src/brain/trainers/: factory.py  full_batch.py  interface.py  model_base.py  sampling.py
src/brain/trainers/components/: early_stopping.py
src/common/: GraphBuilder.py  graph_builder.py  logger.py
src/common/db/: interfaces.py  repository_people_neo4j.py
src/common/schemas/: person.py
src/core/domain/: __init__.py
src/core/domain/entities/: __init__.py  person.py  prediction.py
src/core/domain/enums/: __init__.py  type_person.py
src/core/graph/builders/: graph_builder.py
src/core/graph/features/: person_feature_extractor.py
src/core/ml/encoders/: person_label_encoder.py
src/core/ml/evaluators/: model_evaluator.py
src/core/observability/: logger.py
src/core/settings/: logger.py  neo4j.py
src/ingest/: config.py  ingest_graph.py  main.py
src/ingest/db/: connection.py  models.py  repository_people.py
src/ingest/schemas/: person.py
src/ingest/simulator/: generator.py  generator_person.py  service_people.py  simulator_ingest.py
(+16 files in other folders)
