[project]
name = "reputation-gnn"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "faker>=40.5.1",
    "neomodel>=6.0.1",
    "pydantic-settings>=2.13.1",
    "torch>=2.10.0",
    "torch-geometric>=2.7.0",
    "tqdm>=4.67.3",
]

[project.scripts]
ingest-data = "ingest.main:main"
train-model = "brain.main:train"
predict-model = "brain.main:predict_eval"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ingest", "src/common", "src/brain", "src/app", "src/db"]
