[project]
name = "reputation-gnn"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "faker>=40.5.1",
    "fastapi>=0.135.1",
    "neomodel>=6.0.1",
    "pydantic-settings>=2.13.1",
    "redis>=7.3.0",
    "torch>=2.10.0",
    "torch-geometric>=2.7.0",
    "tqdm>=4.67.3",
    "uvicorn>=0.42.0",
]

[project.scripts]
ingest-data = "ingest.main:main"
train-model = "brain.main:train"
test-model = "brain.main:test"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ingest", "src/common", "src/brain", "src/app", "src/db"]
