[project]
name = "reputation-gnn"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "neomodel>=6.0.1",
    "pydantic-settings>=2.13.1"
]

[project.scripts]
ingest-data = "ingest.main:main"
train-model = "brain.main:train"
test-model = "brain.main:test"

[project.optional-dependencies]
api = [
    "fastapi>=0.135.1",
    "uvicorn>=0.42.0",
    "redis>=7.3.0",
    "torch>=2.10.0",
    "torch-geometric>=2.7.0"
]

ingest = [
    "faker>=40.5.1",
    "neomodel>=6.0.1",
    "tqdm>=4.67.3"
]

train = [
    "torch>=2.10.0",
    "torch-geometric>=2.7.0",
    "tqdm>=4.67.3",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ingest", "src/core", "src/brain", "src/app"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""
